[package]
description = "CVM Gateway contract"
edition = "2021"
name = "cw-xc-gateway"
repository = "https://github.com/ComposableFi/composable"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
library = []
std = ["cw-xc-executor/std", "cvm-runtime/std", "ibc-apps-more/std"]
json-schema = ["ibc-apps-more/json-schema"]
default = ["std"]

[dependencies]
enumn = { workspace = true }
bech32 = { workspace = true, features = ["strict"] }
cosmwasm-std = { workspace = true, features = ["ibc3", "stargate", "cosmwasm_1_3"] }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
ibc = { workspace = true, features = ["parity-scale-codec", "serde", "schema"] }
schemars = { workspace = true }
serde = { workspace = true }
serde-json-wasm = { workspace = true }
thiserror = { workspace = true }

cw-xc-executor = { path = "../executor", features = [
  "library",
], default-features = false }

cvm-runtime = { path = "../../../crates/cvm-runtime", features = [
  "cosmwasm",
], default-features = false }
prost = { workspace = true, default-features = false }
ibc-apps-more= { workspace = true, default-features = false, features = ["cosmwasm"] }
