[package]
description = "CVM Gateway contract"
edition = "2021"
name = "cw-cvm-gateway"
repository = "https://github.com/ComposableFi/cvm"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
library = []
std = [
  "cw-cvm-executor/std",
  "cvm-runtime/std",
  "ibc-apps-more/std",
  "ibc-apps/std",
  "ibc-core/std",
  "ibc-primitives/std",
  "thiserror/std",
]
json-schema = [
  "ibc-apps-more/json-schema",
  "cw-cvm-executor/json-schema",
  "ibc-apps/schema",
  "ibc-core/schema",
  "ibc-primitives/schema",
  "cvm-runtime/json-schema",
]
default = ["std"]

[dependencies]
enumn = { workspace = true }
bech32 = { workspace = true, features = ["strict"] }
cosmwasm-std = { workspace = true, features = [
  "ibc3",
  "stargate",
  "cosmwasm_1_2",
] }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }

schemars = { workspace = true }
serde = { workspace = true }
serde-json-wasm = { workspace = true }
thiserror = { workspace = true }

cw-cvm-executor = { path = "../executor", features = [
  "library",
], default-features = false }

cvm-runtime = { path = "../../../crates/cvm-runtime", features = [
  "cosmwasm",
], default-features = false }
prost = { workspace = true, default-features = false }
ibc-apps-more = { workspace = true, default-features = false, features = [
  "cosmwasm",
] }

ibc-apps = { workspace = true, default-features = false, features = ["serde"] }
ibc-core = { workspace = true, default-features = false, features = ["serde"] }
ibc-primitives = { workspace = true, default-features = false, features = [
  "serde",
] }
