[package]
name = "cw-mantis-order"
version = {workspace = true}
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { workspace = true, features = [
  "iterator",
], default-features = false }

cw-controllers = { workspace = true, default-features = false }
sylvia = { workspace = true, default-features = false }
schemars = { workspace = true, default-features = false, optional = true }
cosmwasm-schema = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }
cw-storage-plus = { workspace = true, features = [
  "iterator",
], default-features = false }
itertools = { workspace = true, features = [
  "use_std",
], default-features = false }

num-integer = { workspace = true, default-features = false, features = ["std"] }

cvm-runtime = { path = "../../../crates/cvm-runtime", default-features = false, features = [
  "cosmwasm",
] }

hex = {workspace = true, default-features = false, features = ["std"] }
sha2 = {workspace = true, default-features = false, features = ["std"] }

no-panic = { workspace = true }
tuples = { workspace = true }

[features]
std = ["cvm-runtime/std"]
json-schema = ["cvm-runtime/json-schema", "dep:schemars"]

[dev-dependencies]
num-rational = { workspace = true, default-features = false, features = [
  "num-bigint-std",
  "std",
] }
