[package]
description = "CVM Outpost contract"
edition = "2021"
name = "cw-cvm-outpost"
repository = "https://github.com/ComposableFi/cvm"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
library = []
std = [
  "cvm-runtime/std",
  "cvm-route/std",
  "cvm/std",
  "ibc-apps-more/std",
  "ibc-app-transfer-types/std",
  "ibc-core-host-types/std",
  "ibc-primitives/std",
  "thiserror/std",
]
json-schema = [
  "ibc-apps-more/json-schema",
  "ibc-app-transfer-types/schema",
  "ibc-core-host-types/schema",
  "ibc-primitives/schema",
  "cvm-runtime/json-schema",
  "cvm-route/json-schema",
  "cvm/json-schema",
  "dep:schemars",
]
cosmos = [
  "cvm-runtime/cosmos",
]
default = ["std", "cosmos"]

[dependencies]
enumn = { workspace = true }
bech32 = { workspace = true, features = ["strict"] }
cosmwasm-std = { workspace = true, features = [
  "ibc3",
  "stargate",
  "cosmwasm_1_1",
  "cosmwasm_1_2",
] }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
schemars = { workspace = true, optional = true}
serde = { workspace = true }
serde-json-wasm = { workspace = true }
thiserror = { workspace = true }
cvm-runtime = { path = "../../../crates/cvm-runtime", features = [
  "cosmwasm",
], default-features = false }
cvm = { path = "../../../crates/cvm", features = [
  "cosmwasm",
  "cw-storage-plus",
], default-features = false }
cvm-route = { path = "../../../crates/cvm-route", features = [
  "cosmwasm",
], default-features = false }
prost = { workspace = true, default-features = false }
ibc-apps-more = { workspace = true, default-features = false, features = [
  "cosmwasm",
] }

ibc-app-transfer-types = { workspace = true, default-features = false, features = ["serde"] }
ibc-core-host-types = { workspace = true, default-features = false, features = ["serde"] }
ibc-primitives = { workspace = true, default-features = false, features = [
  "serde",
] }